src/components/InfoModal/infoModal.module.css
.modal_container {
  background-color: rgba(0, 0, 0, 0.3);
  font-family: var(--base-font);
  display: flex;
  align-items: flex-start;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  overflow-y: scroll;
  z-index: 10;
}
.modal {
  background-color: var(--secondary-accent);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  padding: 1.5rem;
  width: 90%;
  max-width: 700px;
  text-align: left;
  margin: 1rem auto;
}
.modal_header {
  display: flex;
  justify-content: space-between;
  font-size: 1.5em;
  margin-bottom: 1rem;
}
.header_text {
  color: rgba(0, 0, 0, 0.6);
  font-weight: bold;
  text-transform: uppercase;
}
.header_x {
  cursor: pointer;
}
.headline {
  font-size: 1.4em;
}

.image img {
  margin-top: 1rem;
  width: 100%;
  margin-bottom: 1rem;
}

.summary {
  font-size: 1.1rem;
  margin-bottom: 1rem;
  line-height: 1.3;
}

@media screen and (min-width: 700px) {
  .data_container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 100%;
  }
  .summary {
    margin: 1rem;
  }
}

